Generation of png and svg sprite

--- a/source/pages/test-build/index.pug
+++ b/source/pages/test-build/index.pug
@@ -22,3 +22,13 @@ block main
                 .test-svg__item-css
             .test-svg__item
                 .test-svg__item-css
+
+    br
+    hr
+
+    h4 Test png-sprite
+
+    span.icon
+    br
+    br
+    span.icon2
