--- a/source/main.scss
+++ b/source/main.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: url(images/bg-top.jpg) no-repeat center;
-    background-size: cover;
+    background: url(images/bg-top.jpg) no-repeat bottom;
+    background-size: contain;
     font-family: 'Sansus Webissimo';
 }
