--- a/source/pages/portfolio/index.pug
+++ b/source/pages/portfolio/index.pug
@@ -1,7 +1,7 @@
-extends ../base
+extends ../layout
 
 block title
     | Portfolio page
     
 block main
-    h1 page portfolio-pug
+    | content...
