--- a/source/components/nav/nav.pug
+++ b/source/components/nav/nav.pug
@@ -3,5 +3,5 @@ mixin nav (className, items)
     nav(class=`nav ${className}`)
         ul(class=`nav__list`)
             each item in items
-                li(class=`nav__item`)
+                li(class=item.active ? "nav__item nav__item_active" : "nav__item")
                     a(href=`${item.link}` class=`nav__link`)= item.text
