--- a/source/pages/layout.pug
+++ b/source/pages/layout.pug
@@ -9,6 +9,6 @@ html
     body
         .page
             .page__mainbody
-                block main
+                block content
             .page__footer
                 include ../components/footer/footer
