--- a/source/scss/base.scss
+++ b/source/scss/base.scss
@@ -1,8 +1,25 @@
 @import 'params';
+@import 'mixins';
 @import 'fonts';
 
 * {
     box-sizing: border-box;
+}
+
+::-webkit-input-placeholder {
+    color: fff;
+}
+
+::-moz-placeholder {
+    color: #fff;
+}
+
+:-moz-placeholder {
+    color: #fff;
+}
+
+:-ms-input-placeholder {
+    color: #fff;
 }
 
 html {
@@ -12,8 +29,10 @@ html {
 body {
     min-width: 320px;
     height: 100%;
+    color: #474b57;
     font-size: $fs-base;
     font-family: 'Roboto', sans-serif;
+    line-height: 24px;
 }
 
 .page {
@@ -21,6 +40,7 @@ body {
     flex-direction: column;
     align-items: stretch;
     min-height: 100%;
+    overflow: hidden;
 
     &__mainbody {
         flex-grow: 1;
