--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -1,7 +1,41 @@
-extends ../layout
+extends ../empty
+
+include ../../components/nav/nav
+include ../../components/social/social
+include ../../components/copyright/copyright
 
 block title
     | Index page
     
-block main
-    | content...
+block content
+    .l-welcome
+        button(type="button" class="l-welcome__sign-in btn btn_sign-in") Авторизация
+
+        .l-welcome__container
+            .user.user_welcome
+                span(class="user__img" style=`background-image: url(${require('../../images/user-avatar.png')})`)
+                span.user__name Владимир Астахов
+                .user__occupation Личный сайт веб разработчика
+            
+            +social('social_welcome', [
+                { icon: 'vk', link: '#vk' }, 
+                { icon: 'github', link: '#github' }, 
+                { icon: 'in', link: '#in' }
+            ])
+
+            +nav('nav_welcome', [
+                    {
+                        text: 'Мои работы',
+                        link: '#1'
+                    },
+                    {
+                        text: 'Обо мне',
+                        link: '#2'
+                    },
+                    {
+                        text: 'Блог',
+                        link: '#3'
+                    }
+                ])
+                
+        +copyright('copyright_welcome')
