--- a/source/pages/portfolio/index.pug
+++ b/source/pages/portfolio/index.pug
@@ -1,7 +1,122 @@
 extends ../layout
 
+include ./../../components/social/social
+
 block title
     | Portfolio page
     
-block main
-    | content...
+block content
+
+    //- SVG
+    - let svgArrowDown = require('../../images/icons/portf_arrow_down.svg');
+    - let svgArrowUp = require('../../images/icons/portf_arrow_up.svg');
+    - let svgHamburger = require('../../images/icons/hamburger.svg');
+    - let svgStars = require(`../../images/icons/stars1.svg`);
+    - let svgStars2 = require(`../../images/icons/stars2.svg`);
+    - let svgStars3 = require(`../../images/icons/stars3.svg`);
+    - let svgRibbonLeft = require('../../images/icons/about_bg_left.svg');
+    - let svgRibbonRight = require('../../images/icons/about_bg_right.svg');
+
+    .page__content-wrapper
+        section.l-section.l-top
+            .l-top__social
+                +social('social_top', [
+                    {
+                        icon: 'vk',
+                        link: '#vk'
+                    },
+                    {
+                        icon: 'github',
+                        link: '#github'
+                    },
+                    {
+                        icon: 'in',
+                        link: '#in'
+                    }
+                ])
+                
+            .l-top__hamburger
+                button.hamburger
+                    svg(class='hamburger__icon' viewBox=svgHamburger.viewBox): use(xlink:href=svgHamburger.symbol)
+
+            img(class='l-top__bg' src=require('../../images/about-top.jpg'))
+
+            .l-top__container
+                .user
+                    svg(class="user__bg" viewBox=svgStars.viewBox): use(xlink:href=svgStars.symbol)
+                    span(class="user__img" style=`background-image: url(${require('../../images/user-avatar.png')})`)
+                    .user__name Владимир Астахов
+                    .user__occupation Личный сайт веб разработчика
+
+            button(type="button" class="l-top__arrow-button arrow-button")
+                svg(class='arrow-button__icon' viewBox=svgArrowDown.viewBox): use(xlink:href=svgArrowDown.symbol)
+
+            .l-top__ribbon.ribbon.ribbon_dark
+                .ribbon__col.ribbon__col_left
+                    svg(class="ribbon__triangle ribbon__triangle_left" viewBox=svgRibbonLeft.viewBox): use(xlink:href=svgRibbonLeft.symbol)
+                .ribbon__col.ribbon__col_right
+                    svg(class="ribbon__triangle ribbon__triangle_right" viewBox=svgRibbonRight.viewBox): use(xlink:href=svgRibbonRight.symbol)
+
+        section.l-works
+            .l-works__heading.heading.heading_lead.heading_lg.heading_light
+                svg(class="heading__img heading__img_dark heading__img_lg heading__img_stars2" viewBox=svgStars2.viewBox): use(xlink:href=svgStars2.symbol)
+                span.heading__text Мои работы
+            .l-works__wrapper
+                .l-works__viewport
+                    img(src=require('../../images/works-current.png') class="work__current-img")
+                .l-works__info
+                    h4.work__title.heading.heading_lead.heading_shrinked.heading_bordered Сайт школы онлайн образования
+                    ul.work__features
+                        li.work__feature HTML
+                        li.work__feature CSS
+                        li.work__feature JAVASCRIPT
+                    a(href="#" class="btn btn_primary")
+                        span.btn__icon.fa.fa-link
+                        | Посмотреть сайт
+                .l-works__nav
+                    .l-works__nav.l-works__nav_prev
+                        button(type="button" class="l-works__nav-btn")
+                            svg(class='l-works__nav-btn-icon btn_icon' viewBox=svgArrowDown.viewBox): use(xlink:href=svgArrowDown.symbol)
+
+                        img(src=require('../../images/works-prev.jpg') class="work__img work__img_sm")
+                    
+                    .l-works__nav.l-works__nav_next
+                        button(type="button" class="l-works__nav-btn")
+                            svg(class='l-works__nav-btn-icon btn_icon' viewBox=svgArrowUp.viewBox): use(xlink:href=svgArrowUp.symbol)
+
+                        img(src=require('../../images/works-next.jpg') class="work__img work__img_sm")
+
+
+        .section-wrapper.section-wrapper_works
+            section.l-reviews
+                h3.l-reviews__heading.heading.heading_lead.heading_lg.heading_light
+                    svg(class="heading__img heading__img_dark heading__img_stars3" viewBox=svgStars3.viewBox): use(xlink:href=svgStars3.symbol)
+                    span.heading__text Что обо мне говорят
+                
+                ul.l-reviews__quotes
+                    li.l-reviews__quote.quote
+                        span(class="quote__img" style=`background-image: url(${require('../../images/user.png')})`)
+                        .quote__text Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
+                        span.quote__author-name Ковальчук Дмитрий
+                        span.quote__author-occupation — основатель Loftschool
+                        
+                    li.l-reviews__quote.quote
+                        span(class="quote__img" style=`background-image: url(${require('../../images/user2.png')})`)
+                        .quote__text Этот код выдержеит любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!
+                        span.quote__author-name Сабанцев Владимир
+                        span.quote__author-occupation — преподаватель
+                
+            section.l-feedback
+                form.l-feedback__container.form.form_feedback
+                    h3.l-feedback__heading.heading.heading_lead.heading_light.heading_semitran-bordered Связаться со мной
+                    .form__wrapper
+                        input(class="form__control" type="text" placeholder="Ваше имя")
+                        input(class="form__control" type="text" placeholder="Ваш email")
+                        textarea(class="form__control form__control_textarea" placeholder="Ваше сообщение")
+                    .l-feedback__btns
+                        button(type="submit" class="l-feedback__btn btn btn_primary") Отправить
+                        button(type="reset" class="l-feedback__btn btn btn_transparent") Очистить
+                        
+            .to-top
+                button(type="button" class="to-top__btn btn btn_icon")
+                    svg(class='to-top__icon' viewBox=svgArrowUp.viewBox): use(xlink:href=svgArrowUp.symbol)
