--- a/source/scss/blocks/flip-panel.scss
+++ b/source/scss/blocks/flip-panel.scss
@@ -2,10 +2,49 @@
 @import './../mixins';
 
 .flip-panel {
-    background-color: rgba(28, 31, 41, .5);
+    perspective: (407px * 2);
 
     &__side {
+        width: 100%;
         height: 100%;
+        background-color: rgba(28, 31, 41, .5);
+        transition: transform 400ms ease-out, opacity 100ms ease 50ms;
+    }
+
+    &__side_side_front {
+        backface-visibility: hidden;
+        transform-style: preserve-3d;
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+    }
+
+    &__side_side_back {
+        transform: rotateY(-180deg);
+        position: relative;
+        z-index: 0;
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    &_state_flipped {
+        .flip-panel__side {
+            transition: transform 400ms ease-out, opacity 200ms ease 200ms;
+        }
+
+        .flip-panel__side_side_front {
+            transform: rotateY(180deg);
+            z-index: 0;
+            opacity: 0;
+        }
+
+        .flip-panel__side_side_back {
+            transform: rotateY(0deg);
+            z-index: 1;
+            opacity: 1;
+        }
     }
 
     &__content {
