Adaptive, flip, parallax

--- a/source/pages/about/index.pug
+++ b/source/pages/about/index.pug
@@ -21,7 +21,10 @@ block content
     - var svgContactsMap = require(`./../../images/icons/map_n.svg`);
 
     .page-header
-        img(class=`page-header__bg` src=require(`./../../images/layout-bg.jpg`))
+        video(class=`page-header__bg-video` width=`400` height=`300` autoplay loop)
+            source(src=`${require('./../../night.mp4')}`)
+
+        img(class=`page-header__bg` src=require(`./../../images/night_no_bg.png`))
 
         .page-header__bg-user
             svg(class=`page-header__bg-user-img` viewBox=svgStars.viewBox): use(xlink:href=svgStars.symbol)
