--- a/source/pages/blog/index.pug
+++ b/source/pages/blog/index.pug
@@ -16,7 +16,10 @@ block content
 
     .page__content-wrapper
         .page-header.page-header_page_blog
-            img(class=`page-header__bg` src=require(`./../../images/layout-bg.jpg`))
+            video(class=`page-header__bg-video` width=`400` height=`300` autoplay loop)
+                source(src=`${require('./../../night.mp4')}`)
+
+            img(class=`page-header__bg` src=require(`./../../images/night_no_bg.png`))
 
             .page-header__bg-user
                 svg(class=`page-header__bg-user-img` viewBox=svgStars.viewBox): use(xlink:href=svgStars.symbol)
