--- a/source/mixins/copyright.pug
+++ b/source/mixins/copyright.pug
@@ -5,6 +5,6 @@
 
 mixin copyright (className)
     div(class=`copyright` + (className ? ` ${className}` : ``))
-        span.copyright__chunk.copyright__chunk_name|© Владимир Астахов
-        span.copyright__chunk.copyright__chunk_company|Создано с любовью в LoftSchool
-        span.copyright__chunk.copyright__chunk_year|2016
+        span.copyright__name|© Владимир Астахов
+        span.copyright__company|Создано с любовью в LoftSchool
+        span.copyright__year|2016
