--- a/source/scss/blocks/copyright.scss
+++ b/source/scss/blocks/copyright.scss
@@ -4,17 +4,19 @@
 .copyright {
     font-size: 0;
 
-    &__chunk {
+    &__name,
+    &__company,
+    &__year {
         font-size: 16px;
         font-weight: 300;
+    }
 
-        &_company {
-            &::before,
-            &::after {
-                content: "|";
-                display: inline-block;
-                padding: 0 4px;
-            }
+    &__company {
+        &::before,
+        &::after {
+            content: "|";
+            display: inline-block;
+            padding: 0 4px;
         }
     }
 }
@@ -34,18 +36,15 @@
         flex-wrap: wrap;
         justify-content: center;
         text-align: center;
+        font-size: 14px;
 
-        &__chunk {
-            font-size: 14px;
+        &__name {
+            width: 100%;
+        }
 
-            &_name {
-                width: 100%;
-            }
-
-            &_company {
-                &::before {
-                    display: none;
-                }
+        &__company {
+            &::before {
+                display: none;
             }
         }
     }
