--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -7,10 +7,10 @@
 
     &__bg {
         width: 2000px;
-        margin-top: -250px;
+        // margin-top: -250px;
         position: absolute;
         z-index: 1;
-        top: 50%;
+        top: 20%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
