--- a/source/pages/about/index.pug
+++ b/source/pages/about/index.pug
@@ -22,7 +22,7 @@ block content
 
     .page-header
         video(class=`page-header__bg-video` width=`400` height=`300` autoplay loop)
-            source(src=`${require('./../../night.mp4')}`)
+            source(src=`${require('./../../video/media-background.mp4')}`)
 
         img(class=`page-header__bg` src=require(`./../../images/night_no_bg.png`))
 
