--- a/source/pages/portfolio/index.pug
+++ b/source/pages/portfolio/index.pug
@@ -20,7 +20,7 @@ block content
     .page__content-wrapper.page-works
         .page-header.page-works__header
             video(class=`page-header__bg-video` width=`400` height=`300` autoplay loop)
-                source(src=`${require('./../../night.mp4')}`)
+                source(src=`${require('./../../video/media-background.mp4')}`)
 
             img(class=`page-header__bg` src=require(`./../../images/night_no_bg.png`))
 
