--- a/source/scss/_mixins.scss
+++ b/source/scss/_mixins.scss
@@ -42,3 +42,9 @@
         @content;
     }
 }
+
+@mixin media-portrait() {
+    @media screen and (orientation: portrait) {
+        @content;
+    }
+}
