--- a/source/pages/blog/index.pug
+++ b/source/pages/blog/index.pug
@@ -17,7 +17,7 @@ block content
     .page__content-wrapper
         .page-header.page-header_page_blog
             video(class=`page-header__bg-video` width=`400` height=`300` autoplay loop)
-                source(src=`${require('./../../night.mp4')}`)
+                source(src=`${require('./../../video/media-background.mp4')}`)
 
             img(class=`page-header__bg` src=require(`./../../images/night_no_bg.png`))
 
