Page welcome fixes, module flip

--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -14,7 +14,7 @@ block content
         img(class=`page-welcome__bg` src=require(`./../../images/night_no_bg.png`))
 
         .page-welcome__sign-in
-            button(type=`button` id=`sign-in` class=`btn btn_w_100 btn_border_white btn_hover-bg_blue btn_xs-size_small`)
+            button(type=`button` class=`flip-panel__front-toggler btn btn_w_100 btn_border_white btn_hover-bg_blue btn_xs-size_small`)
                 span.text.text_color_white.text_weight_500 Авторизоваться
 
         .page-welcome__flip-panel.flip-panel
@@ -52,19 +52,19 @@ block content
                             { 
                                 text: `Мои работы`, 
                                 link: `portfolio.html`,
-                                itemClass: `btn btn_color_blue`,
+                                itemClass: `nav__item_style_button btn btn_color_blue`,
                                 linkClass: `nav__link text text_color_white text_weight_500`
                             },
                             { 
                                 text: `Обо мне`, 
                                 link: `about.html`,
-                                itemClass: `btn btn_color_blue`,
+                                itemClass: `nav__item_style_button btn btn_color_blue`,
                                 linkClass: `nav__link text text_color_white text_weight_500`
                             },
                             { 
                                 text: `Блог`, 
                                 link: `blog.html`,
-                                itemClass: `btn btn_color_blue`,
+                                itemClass: `nav__item_style_button btn btn_color_blue`,
                                 linkClass: `nav__link text text_color_white text_weight_500`
                             }
                         ]
@@ -111,13 +111,13 @@ block content
                             { 
                                 text: `На главную`, 
                                 link: `#welcome-backflip`,
-                                itemClass: `nav__item_width_50 nav__item_xs-width_auto btn btn_color_blue`,
-                                linkClass: `nav__link text text_color_white text_weight_500`
+                                itemClass: `nav__item_style_button nav__item_width_50 nav__item_xs-width_auto btn btn_color_blue`,
+                                linkClass: `flip-panel__back-toggler nav__link text text_color_white text_weight_500`
                             },
                             { 
                                 text: `Войти`, 
                                 link: `#submit`,
-                                itemClass: `nav__item_width_50 nav__item_xs-width_auto btn btn_color_blue`,
+                                itemClass: `nav__item_style_button nav__item_width_50 nav__item_xs-width_auto btn btn_color_blue`,
                                 linkClass: `nav__link text text_color_white text_weight_500`
                             }
                         ]
