--- a/source/scss/blocks/flip-panel.scss
+++ b/source/scss/blocks/flip-panel.scss
@@ -50,10 +50,12 @@
     &__content {
         display: flex;
         flex-direction: column;
+        width: 100%;
         height: 100%;
     }
 
     &__body {
+        width: 100%;
         flex-grow: 1;
         padding: 35px 30px;
     }
@@ -63,7 +65,7 @@
     }
 
     &__social {
-        margin-top: 25px;
+        margin-top: 15px;
     }
 }
 
