--- a/source/scss/blocks/page-welcome.scss
+++ b/source/scss/blocks/page-welcome.scss
@@ -3,20 +3,16 @@
 
 .page-welcome {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: relative;
     overflow: hidden;
     background-color: #223b65;
 
     &__bg-media {
-        transform: translateX(-50%) translateY(-50%);
         position: absolute;
-        top: 50%;
-        left: 50%;
-        min-width: 100%;
-        min-height: 100%;
-        width: auto;
-        height: auto;
+        bottom: 25%;
+        left: -5%;
+        width: 110%;
     }
 
     &__bg {
@@ -24,7 +20,7 @@
         height: 1467px;
         position: absolute;
         z-index: 1;
-        top: 50%;
+        top: 38%;
         left: 50%;
         margin-top: -(1467px / 2);
         margin-left: -(2200px / 2);
@@ -34,15 +30,15 @@
         width: 380px;
         height: 407px;
         position: absolute;
-        top: 50%;
+        top: 21%;
         left: 50%;
-        margin-top: -200px;
         margin-left: -190px;
         z-index: 2;
     }
 
     &__sign-in {
         width: 180px;
+        height: 40px;
         position: absolute;
         top: 25px;
         right: 20px;
@@ -67,10 +63,27 @@
 @include media-xs {
     .page-welcome {
         display: flex;
+        height: 100vh;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
         padding: 10px;
+
+        &__bg-media {
+            height: 88%;
+            width: auto;
+            bottom: 12%;
+        }
+
+        &__bg {
+            width: 800px;
+            height: auto;
+            top: auto;
+            bottom: 0;
+            left: 50%;
+            margin-top: 0;
+            margin-left: -400px;
+        }
 
         &__sign-in {
             position: static;
@@ -108,11 +121,27 @@
 // sm
 @include media-sm {
     .page-welcome {
+        &__bg-media {
+            height: 80%;
+            top: 0;
+            bottom: auto;
+            min-width: 110%;
+            width: auto;
+        }
+
+        &__bg {
+            width: 1400px;
+            height: auto;
+            top: auto;
+            bottom: 0;
+            margin-left: -700px;
+        }
+
         &__flip-panel {
             width: 348px;
             margin-top: 0;
             margin-left: -174px;
-            top: (275 / 1024 * 100vh);
+            top: 18vh;
         }
     }
 }
