--- a/source/scss/blocks/textfield.scss
+++ b/source/scss/blocks/textfield.scss
@@ -7,7 +7,10 @@
 
     &__addon {
         display: flex;
+        flex-grow: 0;
+        flex-shrink: 0;
         width: 45px;
+        height: 45px;
         background-color: #f0efe9;
     }
 
@@ -19,10 +22,12 @@
 
     &__control {
         flex-grow: 1;
+        flex-shrink: 0;
         height: 45px;
         line-height: 45px;
         padding: 0 15px;
         border: 0 none;
+        border-radius: 0;
         color: #373e42;
         font-family: 'Roboto', sans-serif;
         font-size: 16px;
