Fix nav buttons styles

--- a/source/scss/blocks/nav.scss
+++ b/source/scss/blocks/nav.scss
@@ -51,13 +51,15 @@
 }
 
 // Styles
-// Button
-.nav__item_style_button {
-    padding: 0;
+// Button 
+.nav {
+    .nav__item_style_button {
+        padding: 0;
 
-    .nav__link {
-        display: block;
-        padding: 10px;
+        .nav__link {
+            display: block;
+            padding: 10px;
+        }
     }
 }
 
