--- a/source/scss/blocks/page-welcome.scss
+++ b/source/scss/blocks/page-welcome.scss
@@ -10,7 +10,7 @@
 
     &__bg-media {
         position: absolute;
-        bottom: 25%;
+        bottom: 10%;
         left: -5%;
         width: 110%;
     }
@@ -105,6 +105,7 @@
 // xs-landscape
 @include media-xs-landscape {
     .page-welcome {
+        min-height: 100vh;
         height: auto;
 
         &__sign-in {
@@ -122,11 +123,10 @@
 @include media-sm {
     .page-welcome {
         &__bg-media {
-            height: 80%;
+            min-width: 110%;
+            min-height: 80vh;
             top: 0;
             bottom: auto;
-            min-width: 110%;
-            width: auto;
         }
 
         &__bg {
