--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -7,12 +7,12 @@
 
     &__bg {
         width: 2000px;
-        // margin-top: -250px;
         position: absolute;
         z-index: 1;
-        top: 20%;
+        top: 30%;
         left: 50%;
         transform: translate(-50%, -50%);
+        transition: margin-top 100ms;
     }
 
     &__bg-video {
@@ -22,6 +22,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        transition: margin-top 100ms;
     }
 
     &__bg-user {
@@ -30,6 +31,7 @@
         position: absolute;
         z-index: 2;
         left: 50%;
+        transition: margin-top 100ms;
     }
 
     &__bg-user-img {
@@ -48,6 +50,8 @@
 
     &__anchor-link {
         position: absolute;
+        left: 50%;
+        margin-left: -22px;
     }
 }
 
@@ -56,10 +60,6 @@
 @include media-xs {
     .page-header {
         height: 100vh;
-
-        &__bg {
-            margin-top: -150px;
-        }
 
         &__bg-user {
             width: 281px;
@@ -81,7 +81,7 @@
 @include media-xs-landscape {
     .page-header {
         &__bg {
-            margin-top: -245px;
+            width: 1400px;
         }
 
         &__bg-user {
@@ -102,6 +102,10 @@
 @include media-sm {
     .page-header {
         height: 505px;
+
+        &__bg {
+            width: 1300px;
+        }
 
         &__bg-user {
             width:  281px;
